# computer-geometry-system

./: .gitignore  README.md
doc/: methods.md
methods/: polygon.json
python/: .gitignore  README.md  main.py  methods.py  parse.py  pyproject.toml
rust/: .gitignore  Cargo.toml  justfile
rust/src/: data.rs  editor.rs  equation.rs  list.rs  main.rs  tree.rs
rust/src/nadk/: adresses.rs  backlight.rs  display.rs  keyboard.rs  random.rs  utils.rs
rust/src/nadk/storage/: mod.rs
rust/src/ui/: list.rs  misc.rs
