[package]
name = "computer-geometry-system"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[[bin]]
name = "CGS_rs"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
path = "src/main.rs"
test = false
doctest = false
bench = false
crate-type = ["cdylib"]
name = "cgs_rs"

[features]
default = ["upsilon"]
upsilon = []
epsilon = []

[profile.dev]
panic="abort"
strip=true
opt-level= "z"
lto = true
codegen-units = 1

[profile.release]
panic="abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
cortex-m = {version = "0.7.7", features=["critical-section-single-core"]}
embedded-alloc = "0.6.0"
enum-iterator = "2.3.0"
indextree = { version = "4", default-features = false }

[build-dependencies]
cc = "1.2.46"
